--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -137,10 +137,6 @@
                             <a href="{% url 'main:products' %}" class="menu-mb__link"><span>Products</span></a>
                         </li>
 
-                        <li class="menu-mb__item">
-                            <a href="{% url 'main:blog' %}" class="menu-mb__link"><span>Blog</span></a>
-                        </li>
-
                         <li class="menu-mb__item--lv2 menu-mb--drop">
                             <a href="#" class="menu-mb__link">5-Day Challenge</a>
                             <ul class="menu-mb__list--lv3">
@@ -292,7 +288,7 @@
                         </li>
 
                         <li class="menu-mb__item--lv2 menu-mb--drop">
-                            <a href="#" class="menu-mb__link">Take Control Over Your Habits</a>
+                            <a href="#" class="menu-mb__link">Take Control OF Your Bad Habits</a>
                             <ul class="menu-mb__list--lv3">
 
                                 <li class="menu-mb__item--lv3">
@@ -336,10 +332,6 @@
 
                         <li class="menu-mb__item">
                             <a href="{% url 'main:products' %}" class="menu-mb__link"><span>Products</span></a>
-                        </li>
-
-                        <li class="menu-mb__item">
-                            <a href="{% url 'main:blog' %}" class="menu-mb__link"><span>Blog</span></a>
                         </li>
 
                         <li class="menu-mb__item">
