Added details page

--- a/main/templates/main/bad-habit-summary.html
+++ b/main/templates/main/bad-habit-summary.html
@@ -117,8 +117,8 @@
                                 <div class="col-md-6 mt-2 text-center">
                                     <div class="box">
                                         <div class="chart-bad" data-percent="{{ bad_behavior_form.today_summary }}">
-                                            {{ bad_behavior_form.habits_done_length }}/{{
-                                            bad_behavior_form.selected_behaviors }}
+                                            {{ bad_behavior_form.habits_done_length }}/
+                                            {{ bad_behavior_form.selected_behaviors }}
                                             <canvas height="160" width="160"></canvas>
                                         </div>
                                         <h2>Today</h2>
