--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -99,7 +99,7 @@
         <br>
         <div class="col-12">
             <div class="ut--c mb-1 mb-sm-4">
-                <h3 class="heading-4th--dark-hi wow move-up  animate"
+                <h3 class="heading-6th--dark-hi wow move-up  animate"
                     style="visibility: visible; animation-name: moveVertical;">
 
                     Achieve Your Goals... Faster and Easier Than Ever Before
@@ -107,6 +107,9 @@
             </div>
         </div>
     </div>
+
+    <br>
+    <br>
 
     <div class="d-flex justify-content-between flex-wrap my-3 mb-md-5">
         <div class="col-lg-7">
@@ -153,7 +156,7 @@
 </section>
 
 <section id="with_p_b" class="">
-    <div class="position-relative mt-3 py-5 container-fluid">
+    <div class="position-relative mt-3 py-5 container">
         <h3 class="heading-5th--dark wow move-up animate text-center">Imagine if You Could</h3>
 
         <div class="swiper-container wow move-up animate text-center py-md-5">
@@ -197,8 +200,8 @@
 <br>
 
 <!-- begin about -->
-<div id="About" class="section-some-service-v2" style="padding: 0;">
-    <div class="container">
+<div id="About" class="section-some-service-v2">
+    <div class="p-5">
 
         <!-- Start Title -->
         <div class="row">
